force-app/main/default/objects/Job_Application_Event__e/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Name of the company for this job application</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>