force-app/main/default/objects/Job_Application_Event__e/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <description>Current status after the change</description>
    <label>Current Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>