force-app/main/default/objects/Job_Application_Event__e/fields/Event_Data__c.field-meta.xml
<CustomField>
    <fullName>Event_Data__c</fullName>
    <description>JSON payload containing event-specific data and context</description>
    <label>Event Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>