force-app/main/default/objects/Job_Application_Event__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of event that occurred (CREATED, UPDATED, STATUS_CHANGED, etc.)</description>
    <label>Event Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>