force-app/main/default/objects/Job_Application_Event__e/fields/Job_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Application_Id__c</fullName>
    <description>Reference to the Job Application record that triggered this event</description>
    <label>Job Application ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>