force-app/main/default/objects/Job_Application_Event__e/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <description>Title of the position being applied for</description>
    <label>Position Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>