force-app/main/default/objects/Job_Application_Event__e/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>Previous status before the change (for status change events)</description>
    <label>Previous Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>